Update obsolete URL construction with URI.Create